--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 </section>
 
 <!-- home section ends -->
+    
+    <!-- Please specify how the design works here --> 
 
 <!-- dishes section starts  -->
 
@@ -601,7 +603,7 @@
 <!-- order section ends -->
 
 <!-- footer section starts  -->
-
+    
 <section class="footer">
 
     <div class="box-container">
